Add: Header, Widgets,  Tools and Cta section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,123 @@
   <title>Toolify</title>
 </head>
 <body>
+
+  <main class="main">
+    <navbar class="nav flex justify-between align-center mx-auto large-container px-30">
+      <a href="#"><img src="Images/brand-logo.png" alt="Brand Logo"></a>
+
+      <ul class="nav-links-list flex justify-between align-center">
+        <li class="nav-link link-text cursor-pointer capitalize">widgets</li>
+        <li class="nav-link link-text cursor-pointer capitalize">categories</li>
+        <li class="nav-link link-text cursor-pointer capitalize">help</li>
+      </ul>
+
+      <div class="nav-buttons">
+        <button class="button nav-button cursor-pointer link-text font-regular border-none background-transparent cursor-pointer">Sign in</button>
+        <button class="button nav-button cursor-pointer link-text font-bold border-none cursor-pointer primary-button">Sign up</button>
+      </div>
+    </navbar>
+
+    <section class="header">
+      <div class="medium-container my-200 mx-auto px-30">
+        <h1 class="h1 header-heading_text">Use best 
+          <span class="header-heading highlighted-text">online widgets</span>
+          without any hassel.
+        </h1>
+
+        <p class="heading-paragraph font-large">Toolify widgets help 1,000,000+ website owners to increase sales, engage visitors, collect leads and more. Save your time and money with ready-to-use solutions and grow your business faster!</p>
+
+        <button class="heading-button button primary-button border-none cursor-pointer font-medium ">Browse all widgets</button>
+      </div>
+    </section>
+
+    <section class="widgets">
+      <div class="medium-container relative my-200 mx-auto px-30 text-center">
+        <div class="blur-bg-container">
+
+          <div class="widgets-icon widgets-icon1 absolute"></div>
+          <div class="widgets-icon widgets-icon2 absolute"></div>
+          <div class="widgets-icon widgets-icon3 absolute"></div>
+
+          <h2 class="h2 widgets-heading highlighted-text">Toolify widgets</h2>
+          <p class="widgets-paragraph mx-auto font-medium text-center">We offer the best free and premium widgets/plugins, which help increase user engagement, collect more leads and grow your sales.</p>
+        
+          <div class="widgets-list flex flex-wrap justify-center">
+            <div class="widget small-container flex align-center">
+              <img src="Images/Widgets section/social.png" alt="socail widget">
+              <p class="widget-text font-medium font-regular">Social widgets</p>
+            </div>
+
+            <div class="widget small-container flex align-center">
+              <img src="Images/Widgets section/ecommerce.png" alt="ecommerce widget">
+              <p class="widget-text font-medium font-regular">Ecommerce widgets</p>
+            </div>
+
+            <div class="widget small-container flex align-center">
+              <img src="Images/Widgets section/form.png" alt="form widget">
+              <p class="widget-text font-medium font-regular">Form widgets</p>
+            </div>
+
+            <div class="widget small-container flex align-center">
+              <img src="Images/Widgets section/business.png" alt="business widget">
+              <p class="widget-text font-medium font-regular">Business widgets</p>
+            </div>
+
+            <div class="widget small-container flex align-center">
+              <img src="Images/Widgets section/support.png" alt="support widget">
+              <p class="widget-text font-medium font-regular">Support widgets</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="tools">
+      <div class="medium-container my-200 mx-auto px-30 text-center">
+        <h3 class="h3 tools-heading font-bold">Smart reposnsive tools</h3>
+
+        <p class="tools-paragraph font-large font-regular">Save your time. Our widgets will help you in your daily tasks.</p>
+
+        <div class="tools-cards flex flex-wrap text-center">
+          <div class="toolcard small-container">
+            <h4 class="h4 font-bold mx-auto">Select the widget for your task</h4>
+            <p class="tools-card-text font-small">Choose a widget to increase visitor engagement, boost conversions, generate leads, provide customer support and grow social followers.</p>
+          </div>
+
+          <div class="toolcard small-container">
+            <h4 class="h4 font-bold mx-auto">Set up & adjust it without any hassel</h4>
+            <p class="tools-card-text font-small">Customize your widget with the help of our intuitive editor in a few clicks. Embed it to your website in a matter of seconds.</p>
+          </div>
+
+          <div class="toolcard small-container">
+            <h4 class="h4 font-bold mx-auto">Analyze the widget`s efficiency</h4>
+            <p class="tools-card-text font-small">Monitor your widget`s most important metrics, check how it does the job and see its true value for your website.</p>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="cta">
+      <div class="medium-container text-center my-200 mx-auto px-30">
+        <h3 class="h3 cta-heading">Join 1,078,753 customers already using Toolify</h3>
+
+        <p class="cta-paragraph font-large">Get the taste of 50+ powerful apps by Toolify. Joining is free!</p>
+
+        <button class="button secondary-button cta-button text-black border-none font-medium font-bold">Get start</button>
+      </div>
+    </section>
+  </main>
+
+  <section class="newsletter">
+    <div class="medium-container text-black text-center mx-auto px-30">
+      <h2 class="h2 newsletter-heading">Newsletter</h2>
+
+      <p class="newsletter-paragraph font-medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tempor, in mauris bibendum commodo.</p>
+
+    </div>
+  </section>
+
   
 </body>
 </html>
