Add: footer section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <title>Toolify</title>
 </head>
-<body>
+<body class="mx-auto">
 
   <main class="main">
     <navbar class="nav flex justify-between align-center mx-auto large-container px-30">
@@ -121,9 +121,69 @@
 
       <p class="newsletter-paragraph font-medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tempor, in mauris bibendum commodo.</p>
 
+      <form action="#" class="relative">
+        <input type="text" placeholder="Your email address" class="font-small">
+        <input type="button" value="Subscibe" class="font-medium absolute border-none">
+      </form>
+
     </div>
   </section>
 
+  <footer class="footer">
+    <div class="medium-container mx-auto px-30">
+      <div class="footer-links flex justify-between">
+        <div class="footer-links">
+          <h5 class="font-medium capitalize">widgets</h5>
+
+          <div class="footer-link-items flex flex-col">
+            <a href="#">Our company</a>
+            <a href="#">Our goal</a>
+            <a href="#">Inspiration</a>
+            <a href="#">Testimonials</a>
+            <a href="#">Ratings</a>
+            <a href="#">Awards</a>
+          </div>
+        </div>
+
+        <div class="footer-links">
+          <h5 class="font-medium capitalize">plans</h5>
+
+          <div class="footer-link-items flex flex-col">
+            <a href="#">Yearly</a>
+            <a href="#">Monthly</a>
+            <a href="#">One time</a>
+            <a href="#">One widget</a>
+          </div>
+        </div>
+
+        <div class="footer-links">
+          <h5 class="font-medium capitalize">about us</h5>
+
+          <div class="footer-link-items flex flex-col">
+            <a href="#">Our company</a>
+            <a href="#">Our goal</a>
+            <a href="#">Inspiration</a>
+            <a href="#">Testimonials</a>
+            <a href="#">Ratings</a>
+            <a href="#">Awards</a>
+          </div>
+        </div>
+
+        <div class="footer-links">
+          <h5 class="font-medium capitalize">office</h5>
+
+          <div class="footer-link-items flex flex-col">
+            <a href="#">4139 Rhode Island Avenue</a>
+            <a href="#">Washington DC</a>
+            <a href="#">202-399-2897</a>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2216.943001188887!2d73.12598483171502!3d33.54867724720613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dfed7e1e987d71%3A0x19f15752b91035de!2sUptek!5e0!3m2!1sen!2s!4v1722344707589!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+        </div>
+    
+      </div>
+
+    </div>
+  </footer>
   
 </body>
 </html>
