--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <a href="#"><img src="Images/brand-logo.png" alt="Brand Logo"></a>
 
       <ul class="nav-links-list flex justify-between align-center">
-        <li class="nav-link link-text cursor-pointer capitalize">widgets</li>
-        <li class="nav-link link-text cursor-pointer capitalize">categories</li>
-        <li class="nav-link link-text cursor-pointer capitalize">help</li>
+        <li class="nav-link link-text cursor-pointer capitalize"><a href="#" class="relative">widgets</a></li>
+        <li class="nav-link link-text cursor-pointer capitalize"><a href="#" class="relative">categories</a></li>
+        <li class="nav-link link-text cursor-pointer capitalize"><a href="#" class="relative">help</a></li>
       </ul>
 
       <div class="nav-buttons">
@@ -110,7 +110,7 @@
 
         <p class="cta-paragraph font-large">Get the taste of 50+ powerful apps by Toolify. Joining is free!</p>
 
-        <button class="button secondary-button cta-button text-black border-none font-medium font-bold">Get start</button>
+        <button class="button secondary-button cta-button text-black border-none cursor-pointer font-medium font-bold">Get start</button>
       </div>
     </section>
   </main>
@@ -123,7 +123,7 @@
 
       <form action="#" class="relative">
         <input type="text" placeholder="Your email address" class="font-small">
-        <input type="button" value="Subscibe" class="font-medium absolute border-none">
+        <input type="button" value="Subscibe" class="font-medium absolute cursor-pointer border-none">
       </form>
 
     </div>
@@ -135,53 +135,53 @@
         <div class="footer-links">
           <h5 class="font-medium capitalize">widgets</h5>
 
-          <div class="footer-link-items flex flex-col">
-            <a href="#">Our company</a>
-            <a href="#">Our goal</a>
-            <a href="#">Inspiration</a>
-            <a href="#">Testimonials</a>
-            <a href="#">Ratings</a>
-            <a href="#">Awards</a>
-          </div>
+          <ul class="footer-link-items flex flex-col">
+            <li><a href="#" class="relative">Our company</a></li>
+            <li><a href="#" class="relative">Our goals</a></li>
+            <li><a href="#" class="relative">Inspiration</a></li>
+            <li><a href="#" class="relative">Testimonials</a></li>
+            <li><a href="#" class="relative">Ratings</a></li>
+            <li><a href="#" class="relative">Awards</a></li>
+          </ul>
         </div>
 
         <div class="footer-links">
           <h5 class="font-medium capitalize">plans</h5>
 
-          <div class="footer-link-items flex flex-col">
-            <a href="#">Yearly</a>
-            <a href="#">Monthly</a>
-            <a href="#">One time</a>
-            <a href="#">One widget</a>
-          </div>
+          <ul class="footer-link-items flex flex-col">
+            <li><a href="#" class="relative">Yearly</a></li>
+            <li><a href="#" class="relative">Monthly</a></li>
+            <li><a href="#" class="relative">One time</a></li>
+            <li><a href="#" class="relative">One widget</a></li>
+          </ul>
         </div>
 
         <div class="footer-links">
           <h5 class="font-medium capitalize">about us</h5>
 
-          <div class="footer-link-items flex flex-col">
-            <a href="#">Our company</a>
-            <a href="#">Our goal</a>
-            <a href="#">Inspiration</a>
-            <a href="#">Testimonials</a>
-            <a href="#">Ratings</a>
-            <a href="#">Awards</a>
-          </div>
+          <ul class="footer-link-items flex flex-col">
+            <li><a href="#" class="relative">Our company</a></li>
+            <li><a href="#" class="relative">Our goals</a></li>
+            <li><a href="#" class="relative">Inspiration</a></li>
+            <li><a href="#" class="relative">Testimonials</a></li>
+            <li><a href="#" class="relative">Ratings</a></li>
+            <li><a href="#" class="relative">Awards</a></li>
+          </ul>
         </div>
 
         <div class="footer-links">
           <h5 class="font-medium capitalize">office</h5>
 
-          <div class="footer-link-items flex flex-col">
-            <a href="#">4139 Rhode Island Avenue</a>
-            <a href="#">Washington DC</a>
-            <a href="#">202-399-2897</a>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2216.943001188887!2d73.12598483171502!3d33.54867724720613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dfed7e1e987d71%3A0x19f15752b91035de!2sUptek!5e0!3m2!1sen!2s!4v1722344707589!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div>
+          <ul class="footer-link-items flex flex-col">
+            <li><a href="#" class="relative">4139 Rhode Island Avenue</a></li>
+            <li><a href="#" class="relative">Washington DC</a></li>
+            <li><a href="#" class="relative">202-399-2897</a></li>
+            <li>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2216.943001188887!2d73.12598483171502!3d33.54867724720613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dfed7e1e987d71%3A0x19f15752b91035de!2sUptek!5e0!3m2!1sen!2s!4v1722344707589!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="google-map"></iframe>
+            </li>
+          </ul>
         </div>
-    
       </div>
-
     </div>
   </footer>
   
