Add: hover affects on buttons

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         
         <form action="#" class="newsletter-form">
           <input type="email" placeholder="Your email address" class="newsletter-form_input font-small">
-          <input type="button" value="Subscribe" class="newsletter-form_button">
+          <input type="button" value="Subscribe" class="newsletter-form_button button button-black">
         </form>
       </div>
       
